--- a/views/home/partials/header.html
+++ b/views/home/partials/header.html
@@ -1,6 +1,6 @@
 <div class="twelve columns">
     <div class="panel">
         <img src="http://cdn1.iconfinder.com/data/icons/animals/48/Panda.png" style="float: right; position: relative; top: 10px;">
-        <h1>Zodiacs</h1>
+        <a href="index.php"><h1>Zodiacs</h1></a>
     </div>
 </div>
