--- a/views/home/partials/sideRight.html
+++ b/views/home/partials/sideRight.html
@@ -2,7 +2,7 @@
     <div class="panel">
 
         <ul class="twelve side-nav">
-            <li class="link-github"><a href="#">GitHub</a></li>
+            <li class="link-github"><a href="https://github.com/awc737/zodiacs" target="_blank">GitHub</a></li>
             <li class="divider"></li>
         </ul>
 
